Fri Sep 14 11:39:03 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Mahes Varadarajan and Kevin Clien to the hall of
	  fame.  

Thu Sep 13 22:43:34 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the new Cache_Growth_Test to the
	  daily tests.

Thu Sep 13 20:38:44 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Manager.h (ACE_Thread_Manager): Changed the default
	  argument <prealloc> for the constructor from 0 to
	  ACE_DEFAULT_THREAD_MANAGER_PREALLOC.  Thanks to Doug for
	  pointing this out.

	  Added better documentation to explain the purpose of each
	  argument in ACE_Thread_Manager's constructor.  Thanks to Nick
	  Pratt <npratt@microstrategy.com> for motivating the change.

Thu Sep 13 13:38:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/High_Res_Timer.cpp (elapsed_time (ACE_hrtime_t&nanoseconds),
          elapsed_time_incr (ACE_hrtime_t&nanoseconds): Instead of using
          "nanoseconds >>= 10", use "nanoseconds = nanoseconds >> 10" to
          work around a Borland C++Builder bug. Thanks very much to
          Johnny Willemsen, Christopher Kohlhoff, and Alain Decamps
          for solving this problem.

Thu Sep 13 13:33:29 2001  Steve Huston  <shuston@riverace.com>

        * tests/Service_Config_Test.cpp: Added #include "ace/Log_Msg.h".
          This was probably to get AIX to build clean, but it's been a
          while.

Thu Sep 13 12:04:04 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Werner Buchert to the hall of fame.

Wed Sep 12 15:10:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/High_Res_Timer.cpp (elapsed_time (ACE_hrtime_t&nanoseconds),
          elapsed_time_incr (ACE_hrtime_t&nanoseconds): Changes to account
          for very fast clocks (> 1GHz). Thank you to Derek Dominish
          <derek.dominish@boeing.com> and Alain Decamps
          <Alain.Decamps@PIDPA.be> for identifying the problem and coming